--- a/index.css
+++ b/index.css
@@ -92,10 +92,11 @@ span.price {
 }
 
 .footer {
-  position: fixed;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
+  padding: 1%;
   background-color: #39FF14;
   color: white;
   text-align: center;
