--- a/index.css
+++ b/index.css
@@ -96,6 +96,7 @@ span.price {
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 100px;
   padding: 1.5%;
   background-color: #39FF14;
   color: white;
